--- a/KeepTheBeat!/AndroidManifest.xml
+++ b/KeepTheBeat!/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nadt.keepthebeatsurvival"
+    package="com.nadt.drawnandrace"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -21,7 +21,7 @@
         <activity
             android:noHistory="true"
             android:screenOrientation="portrait"
-            android:name="com.nadt.keepthebeatsurvival.title.Title"
+            android:name="com.nadt.drawandrace.title.Title"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,7 +41,7 @@
 		<activity 
 		    android:noHistory="true"
 		    android:screenOrientation="portrait" 
-		    android:name="com.nadt.keepthebeatsurvival.ScoreActivity"></activity>
+		    android:name="com.nadt.drawandrace.ScoreActivity"></activity>
 
     </application>
 
